kanban-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-ui
  namespace: kanban-namespace
spec:
  type: NodePort
  selector:
    app: kanban-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
